k8s/infra/security/np-allow-api-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-api-egress
  namespace: devops-demo
spec:
  podSelector:
    matchLabels:
      app: devops-api
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: devops-demo
          podSelector:
            matchLabels:
              app: mongo
      ports:
        - protocol: TCP
          port: 27017

    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: devops-demo
          podSelector:
            matchLabels:
              app: redis
      ports:
        - protocol: TCP
          port: 6379

    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
