k8s/infra/security/np-allow-api-to-mongo.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-api-to-mongo
  namespace: devops-demo
spec:
  podSelector:
    matchLabels:
      app: mongo
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: devops-api
      ports:
        - protocol: TCP
          port: 27017
