k8s/infra/security/np-allow-ingress-to-api.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-to-api
  namespace: devops-demo
spec:
  podSelector:
    matchLabels:
      app: devops-api
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress
              # name: ingress
      ports:
        - protocol: TCP
          port: 3000
