k8s/infra/security/np-default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: devops-demo
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
